# Elite_Robots_CS_SDK

./: CMakeLists.txt  Elite_Robots_CS_SDK.sln  README.cn.md  README.md
dotnet/: API.cn.md  API.md  README.cn.md  README.md
dotnet/EliteRobots.CSharp/: EliteRobots.CSharp.csproj
dotnet/EliteRobots.CSharp.Sample/: EliteRobots.CSharp.Sample.csproj  Program.cs  connect_robot_test.cs  example_dashboard.cs  example_dashboard_client.cs  example_driver.cs  example_elite_utils.cs  example_primary.cs  example_primary_client.cs  example_rtsi.cs  example_rtsi_client.cs  example_rtsi_io.cs  example_servoj_plan.cs  example_trajectory.cs
dotnet/EliteRobots.CSharp/src/: DriverTypes.cs  EliteDashboardClient.cs  EliteDriverClient.cs  ElitePrimaryClient.cs  EliteRtsiClient.cs  EliteRtsiIOClient.cs  NativeMethods.cs  RtsiIOInterface.cs
example/: example_feedback.cpp  trajectory_vel_example.cpp
include/Control/: TrajectoryInterface.hpp
include/Elite/: DataType.hpp  EliteDriver.hpp
source/Control/: TrajectoryInterface.cpp
source/Elite/: EliteDriver.cpp
source/resources/: external_control.script
test/: TrajectoryInterfaceTest.cpp
wrapper/: CMakeLists.txt
wrapper/c/: CMakeLists.txt
wrapper/c/include/EliteC/: elite_c_types.h  elite_sdk_c.h
wrapper/c/include/EliteC/Common/: elite_common_c.h
wrapper/c/include/EliteC/Dashboard/: elite_dashboard_c.h
wrapper/c/include/EliteC/Elite/: elite_driver_c.h  elite_extra_c.h
wrapper/c/include/EliteC/Primary/: elite_primary_c.h
wrapper/c/include/EliteC/Rtsi/: elite_rtsi_c.h
wrapper/c/source/common/: elite_common_c.cpp
wrapper/c/source/dashboard/: elite_dashboard_c.cpp
wrapper/c/source/elite/: elite_driver_c.cpp  elite_extra_c.cpp
wrapper/c/source/primary/: elite_primary_c.cpp
wrapper/c/source/rtsi/: elite_rtsi_c.cpp
wrapper/include/: Elite_C_Types.h  Elite_Sdk_C.h
wrapper/include/Dashboard/: Elite_Dashboard_C.h
wrapper/include/Elite/: Elite_Controllerlog_C.hpp  Elite_Driver_C.h  Elite_Log_C.hpp  Elite_Remoteupgrade_C.hpp  Elite_Serialcommunication_C.hpp  Elite_Versioninfo_C.hpp
wrapper/include/Primary/: Elite_Primary_C.h
wrapper/include/Rtsi/: Elite_Rtsi_C.h
wrapper/source/Dashboard/: Elite_Dashboard_C.cpp
wrapper/source/Elite/: Elite_Controllerlog_C.cpp  Elite_Driver_C.cpp  Elite_Log_C.cpp  Elite_Remoteupgrade_C.cpp  Elite_Serialcommunication_C.cpp  Elite_Serialcommunication_Internal.hpp  Elite_Versioninfo_C.cpp
wrapper/source/Primary/: Elite_Primary_C.cpp
wrapper/source/Rtsi/: Elite_Rtsi_Client_C.cpp  Elite_Rtsi_Internal.hpp  Elite_Rtsi_Io_C.cpp  Elite_Rtsi_Recipe_C.cpp
